<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".MainActivity"
    android:clickable="true"
    android:focusableInTouchMode="true">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/codigo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:ems="10"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:hint="Código del producto"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.568"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/descripcion"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_width="348dp"
                android:layout_height="47dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Descripción"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.682"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/codigo" />

            <EditText
                android:id="@+id/precio"
                android:layout_width="85dp"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.556"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion" />

            <Button
                android:id="@+id/boton_registrar"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/botonn"
                android:onClick="Registrar"
                android:text="Guardar"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/precio" />

            <Button
                android:id="@+id/boton_buscar"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/botonn"
                android:onClick="Buscar"
                android:text="Buscar"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boton_registrar" />

            <Button
                android:id="@+id/boton_modificar"
                android:layout_width="150dp"
                android:layout_height="52dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/botonn"
                android:onClick="Modificar"
                android:text="Modificar"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boton_buscar" />

            <Button
                android:id="@+id/boton_elinimar"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/botonn"
                android:onClick="Elinimar"
                android:text="Eliminar"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boton_modificar"
                app:layout_constraintVertical_bias="0.028" />

            <TextView
                android:id="@+id/codigo_txt"
                android:layout_width="86dp"
                android:layout_height="39dp"
                android:layout_marginTop="48dp"
                android:text="@string/codigo_txt"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toStartOf="@+id/codigo"
                app:layout_constraintHorizontal_bias="0.602"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/precio_txt"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:text="@string/precio_txt"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/boton_registrar"
                app:layout_constraintEnd_toStartOf="@+id/precio"
                app:layout_constraintHorizontal_bias="0.53"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion"
                app:layout_constraintVertical_bias="0.461" />

            <Button
                android:id="@+id/scaner"
                android:layout_width="81dp"
                android:layout_height="42dp"
                android:background="@drawable/boton"
                android:text="@string/boton_scaner"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@+id/codigo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.069" />

            <Button
                android:id="@+id/btnSuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton"
                android:onClick="Operacion"
                android:text="@string/btnSuma"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toEndOf="@+id/boton_registrar"
                app:layout_constraintTop_toTopOf="@+id/boton_registrar"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/total"
                android:layout_width="99dp"
                android:layout_height="66dp"
                android:text="0"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toEndOf="@+id/boton_modificar"
                app:layout_constraintTop_toTopOf="@+id/boton_modificar"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/totalString"
                android:layout_width="105dp"
                android:layout_height="37dp"
                android:text="@string/totalString"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.446"
                app:layout_constraintStart_toEndOf="@+id/boton_buscar"
                app:layout_constraintTop_toTopOf="@+id/boton_buscar"
                app:layout_constraintVertical_bias="0.609" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="86dp"
                android:layout_height="47dp"
                android:background="@drawable/boton"
                android:onClick="Reset"
                android:text="@string/boton_reset"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/boton_elinimar"
                app:layout_constraintTop_toBottomOf="@+id/total"
                app:layout_constraintVertical_bias="0.122" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="38dp"
                android:layout_height="57dp"
                android:layout_marginEnd="4dp"
                android:text="$"
                android:textAlignment="viewEnd"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/boton_elinimar"
                app:layout_constraintEnd_toStartOf="@+id/total"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toEndOf="@+id/boton_modificar"
                app:layout_constraintTop_toBottomOf="@+id/boton_buscar" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>